# mtcli

./: ..test.~  .editorconfig  .env-dist  .env-test  .gitattributes  .gitignore  .mtcli  .mtcli-dist  .pypirc-dist  .readthedocs.yaml  .travis.yml  .travis.yml-dist  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  SPONSORS.md  a.bat  abrev.bat  activ.bat  app.py  atr.bat  atr.py  atrx.bat  audusd.bat  b.bat  b3.bat  bbas3.bat  bbdc4.bat  btl.bat  btow3.bat  build.bat  c.bat  ccm@.bat  ci.bat  clear.bat  (+120 more)
.github/: ISSUE_TEMPLATE.md
abreviaturas/: index.html
agradecimentos/: index.html
bars/: index.html
chartcli/: __init__.py  _helper.py  _view.py  bar.py  brooks_patterns1.py  chartcli.py  cli.py  conf.py  fib.py  view.py
chartcli/indicator/: __init__.py  atr.py  ema.py  sma.py
chartcli/lib/: bar.py  brooks_patterns2.py  fib.py  patterns.py
cli_trade/: __init__.py  _bar.py  _brooks_patterns1.py  _brooks_patterns2.py  _candle.py  _helper.py  _view.py  atr.py  brooks_patterns2.py  candle.py  cli.py  cli_trade.py  conf.py  ema.py  expec.py  helper.py  kelly.py  settings.py  sma.py
cli_trade/indicator/: atr.py  ema.py  sma.py
cli_trade/src/: brooks_patterns1.py  brooks_patterns2.py  candle.py  helper.py  model.py  view.py
conf/: index.html
contrib/Experts/: CSVSwingTrade.ex5
contrib/Indicattors/: EMA2CSV.ex5
contribute/: index.html
docs/: INSTALLATION.md  Makefile  README.md  abreviaturas.md  authors.rst  bars.md  chart.md  conf.md  conf.py  contribute.md  contributing.rst  history.rst  index.md  index.rst  install.md  installation.rst  make.bat  mm.md  plugins.md  python.md  requirements.txt  rm.md  usage.md  usage.rst
instalacao/: index.html
install/: index.html
metatrader5/Experts/: CSVDayTrade.ex5
mm/: index.html
mtcli/: __init__.py  __main__.py  bar.py  bars.py  brooks_patterns1.py  brooks_patterns2.py  candlestick_patterns.py  cli.py  cli_dev.py  conecta.py  conf.py  config_registre.py  controller.py  csv_data.py  csv_ma.py  database.py  fib.py  helper.py  helpers.py  logger.py  ma.py  mm.py  model.py  models.py  mt.py  mt5_context.py  mt5_facade.py  mtcli.py  paction.py  plugin.py  plugin_loader.py  plugin_manager.py  pymql5_facade.py  rate_model.py  rm.py  sa.py  set.py  trading.py  view.py  views.py  (+2 more)
mtcli-folder/: a.bat  ch.bat  d1.bat  default.bat  h1.bat  leiame.txt  m1.bat  m15.bat  m3.bat  m30.bat  m5.bat  mm1.bat  mm2.bat  mm30.bat  mm5.bat  mm9.bat  mmd1.bat  mmn1.bat  mn1.bat  ww1.bat
mtcli-folder/experts/: GeraCSVDayTrade.ex5
mtcli/_models/: model.py  range_model.py
mtcli/_views/: close_view.py  range_view.py  view.py
mtcli/commands/: backfill.py  bars.py  conf.py  doctor.py  logs.py  migrate.py  ticks.py
mtcli/commands_dev/: migrate.py
mtcli/controllers/: bars_controller.py
mtcli/data/: __init__.py  base.py  csv.py  mt5.py  sqlite.py
mtcli/datasources/: mt5.py
mtcli/domain/: timeframe.py
mtcli/extensions/: __init__.py
mtcli/indicator/: __init__.py  atr.py  ema.py  sma.py
mtcli/marketdata/: backfill.py  backfill_engine.py  tick_bus.py  tick_cache.py  tick_engine.py  tick_repository.py  tick_streamer.py  tick_writer.py  trade_tick_filter.py
mtcli/migrations/: 001_initial_schema.py  002_ticks_time_msc.py  003_optimize_ticks_without_rowid.py  004_ticks_pk_time_msc.py  005_tick_price_compression.py  006_add_index_ticks_symbol_time.py  007_deduplicate_ticks_and_add_unique_index.py  008_fix_ticks_unique_index.py  __main__.py  runner.py  xxx_keep_only_trade_ticks.py
mtcli/models/: __init__.py  bar_model.py  bars.py  bars_model.py  chart.py  chart_model.py  conf_model.py  consecutive.py  consecutive_bars_model.py  csv_data.py  model_agressao.py  model_average_range.py  model_average_volume.py  model_bar.py  model_bars.py  model_chart.py  model_consecutive_bars.py  model_ma.py  model_mas.py  model_moving_average.py  model_paction.py  model_pattern.py  model_ranges.py  model_rates.py  model_rates_ma.py  model_signals.py  model_volume_medio.py  pattern.py  rate.py  rates_model.py  signals_model.py  unconsecutive_bar_model.py
mtcli/pa/: bar.py  helpers.py  pa_bar.py  pa_one_bar.py  pa_two_bars.py  pattern.py
mtcli/plugins/: exemplo.py-dist  hello.py
mtcli/services/: maintenance_service.py  tick_service.py
mtcli/utils/: pidfile.py  time.py
mtcli/views/: __init__.py  base.py  close_view.py  factory.py  full.py  full_view.py  high_view.py  low_view.py  min.py  min_view.py  open_view.py  range.py  ranges_view.py  rate.py  rates_view.py  utils.py  vars_view.py  view_agressao.py  view_close.py  view_full.py  view_high.py  view_intermediate.py  view_low.py  (+9 more)
mtcli_arquivos/: .env  GeraCSV.ex5  GeraCSVBackTest.ex5  a.bat  abrev.bat  abreviaturas.txt  atrd1.bat  atrh1.bat  atrm15.bat  atrm5.bat  atrmn1.bat  atrw1.bat  ccm.bat  ch.bat  conf.bat  d.bat  d1.bat  d1r.bat  dd1.bat  default.bat  h1.bat  h1r.bat  h4.bat  h4r.bat  hh1.bat  highlows.bat  hl.bat  init.bat  leiame.txt  m1.bat  m10.bat  m10r.bat  m15.bat  m15r.bat  m1r.bat  m2.bat  m2r.bat  m3.bat  m30.bat  m30r.bat  (+26 more)
plugins/: index.html
resources/: GeraCSVM5.ex5
rm/: index.html
search/: search_index.json
templates/: candle.py  ohlc.py
tests/: __init__.py  test_atr.py  test_bar.py  test_bars.py  test_bars_cli.py  test_brooks_patterns1.py  test_brooks_patterns2.py  test_candle.py  test_candle_eurusd.py  test_candlestick_patterns.py  test_cli.py  test_cli_trade.py  test_conf.py  test_conf.txt  test_controller.py  test_ema.py  test_expectativa.py  test_fib.py  test_fibo.py  test_func_bars.py  test_func_rm.py  test_helper.py  test_helpers.py  test_ma.py  test_mm.py  test_model.py  test_model_bar.py  test_model_conf.py  test_model_consecutive_bars.py  test_model_signals.py  test_model_unconsecutive_bar.py  test_models.py  test_mt.py  test_mt_bars.py  test_mt_ma.py  test_mt_rm.py  test_mt_set.py  test_mtcli.py  test_oco.py  test_ohlc.py  (+11 more)
trade/: __init__.py  atr.py  bar.py  candle.py  candles.py  chart.py  ema.py  oco.py  ohlc.py  price.py  reader.py  settings.py  sma.py
usage/: index.html
vm/: index.html
(+175 files in other folders)
