[project]
name = "mtcli"
version = "4.0.0.dev0"
description = "Aplicativo CLI para exibir gráficos do MetaTrader 5 em texto acessível ao leitor de telas"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
license = "GPL-3.0"
readme = "README.md"
keywords = ["MetaTrader 5", "trading", "CLI"]
requires-python = ">=3.10,<3.14.0"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "metatrader5 (>=5.0.5260,<6.0.0)",
]

[project.urls]
homepage = "https://pypi.org/project/mtcli"
repository = "https://github.com/vfranca/mtcli"
documentation = "https://mtcli.readthedocs.io/pt-br/latest"
issues = "https://github.com/vfranca/mtcli/issues"

[project.scripts]
mt = "mtcli.mt:mt"

[project.entry-points."mtcli.plugins"]
mtcli = "mtcli.plugin:register"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.16.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-env = "^1.1.5"
pytest-cov = "^6.3.0"
pydocstyle = "^6.3.0"
ruff = "^0.14.1"
pytest-mock = "^3.15.1"

[tool.pytest.ini_options]
env = [
    "DIGITOS=2",
    "DOJI=DOJI",
    "BULL=VERDE",
    "BEAR=VERMELHO",
    "BULLBREAKOUT=C",
    "BEARBREAKOUT=V",
    "TOPTAIL=TOP",
    "BOTTOMTAIL=BOTTOM",
    "PERCENTUAL_DOJI=10",
    "PERCENTUAL_BREAKOUT=50",
    "DADOS=csv",
    "MT5_PASTA=C:/Users/Administrador/cli/mtcli/tests/fixtures/Files"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # Estilo
  "F",    # Lógica
  "B",    # Boas práticas
  "I",    # Imports
  "UP",   # Upgrade
  "N",    # Naming
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mtcli"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
