[project]
name = "mtcli"
version = "4.0.0.dev1"
description = "Aplicativo CLI para exibir gráficos do MetaTrader 5 screen reader friendly"
readme = "README.md"
requires-python = ">=3.10,<3.14"

authors = [
    { name = "Valmir França da Silva", email = "vfranca3@gmail.com" }
]

license = "MIT"

keywords = [
    "trading",
    "price-action",
    "candlestick",
    "metatrader5",
    "mt5",
    "cli",
    "terminal",
    "accessibility",
    "screen-reader"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Utilities"
]

dependencies = [
    "click>=8.2.1,<9.0.0",
    "MetaTrader5>=5.0.5260,<6.0.0"
]

[project.urls]
Homepage = "https://github.com/vfranca/mtcli"
Repository = "https://github.com/vfranca/mtcli"
Documentation = "https://mtcli.readthedocs.io/pt-br/latest"
Issues = "https://github.com/vfranca/mtcli/issues"

[project.scripts]
mt = "mtcli.mt:mt"

[project."entry-points"."mtcli.plugins"]
mtcli = "mtcli.plugin:register"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-env = "^1.1.5"
pytest-cov = "^6.3.0"
pytest-mock = "^3.15.1"
pydocstyle = "^6.3.0"
ruff = "^0.14.1"

[tool.pytest.ini_options]
env = [
    "DIGITOS=2",
    "DOJI=DOJI",
    "BULL=VERDE",
    "BEAR=VERMELHO",
    "BULLBREAKOUT=C",
    "BEARBREAKOUT=V",
    "TOPTAIL=TOP",
    "BOTTOMTAIL=BOTTOM",
    "PERCENTUAL_DOJI=10",
    "PERCENTUAL_BREAKOUT=50",
    "DADOS=csv",
    "MT5_PASTA=C:/Users/Administrador/cli/mtcli/tests/fixtures/Files"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B",
  "I",
  "UP",
  "N",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mtcli"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
