[project]
name = "mtcli"
version = "3.7.0.dev6"
description = "Aplicativo CLI para exibir gráficos do MetaTrader 5 screen reader friendly"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.14.0"

keywords = [
    "trading",
    "candlestick",
    "metatrader5",
    "mt5",
    "cli",
    "price-action"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "metatrader5 (>=5.0.5260,<6.0.0)",
]

[project.urls]
homepage = "https://github.com:vfranca/mtcli"
repository = "https://github.com/vfranca/mtcli"
documentation = "https://mtcli.readthedocs.io/pt-br/latest"
issues = "https://github.com/vfranca/mtcli/issues"

[project.scripts]
mtcli = "mtcli.cli:mt"
mt = "mtcli.cli:mt"

[project.entry-points."mtcli.plugins"]
mtcli = "mtcli.plugin:register"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "DIGITOS=2",
    "LATERAL=DOJI",
    "ALTA=VERDE",
    "BAIXA=VERMELHO",
    "ROMPIMENTO_ALTA=C",
    "ROMPIMENTO_BAIXA=V",
    "SOMBRA_SUPERIOR=TOP",
    "SOMBRA_INFERIOR=BOTTOM",
    "PERCENTUAL_DOJI=10",
    "PERCENTUAL_ROMPIMENTO=50",
    "DADOS=csv",
    "MT5_PASTA=C:/Users/Administrador/cli/mtcli/tests/fixtures/Files"
]

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.16.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-env = "^1.1.5"
pytest-cov = "^6.3.0"
pydocstyle = "^6.3.0"
ruff = "^0.14.1"
pytest-mock = "^3.15.1"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # Estilo
  "F",    # Lógica
  "B",    # Boas práticas
  "I",    # Imports
  "UP",   # Upgrade
  "N",    # Naming
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mtcli"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
